Archive2/7a/923571fab44fa4/output
main.cpp:17:18: error: variable length arrays are a C99 feature [-Werror,-Wvla-extension]
    float tablica[a];                                            // wielkosc tablicy
                 ^
main.cpp:12:11: error: unused variable 'suma' [-Werror,-Wunused-variable]
    float suma=0, b=0;                    // zmienne 
          ^
2 errors generated.
